...
      name: "Tomate",
      isInActiveGrowth: true,
      hasHydricNeeds: true,
      isWaterSensitivePeriod: false, // Pas en période critique
    ),
    const PlantData(
      name: "Carotte",
      isInActiveGrowth: false, // Pas en croissance active
      hasHydricNeeds: true,
      isWaterSensitivePeriod: true,
    ),
  ];
});
...
